Update index.html with command instructions

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 even if your outta district this may still work for u! just run the following command g
 curl shim-csd.vercel.app | bash
+or if you love wget use this one
+wget -qO- shim-csd.vercel.app | bash
