--- a/index.html
+++ b/index.html
@@ -1,4 +1,82 @@
-even if your outta district this may still work for u! just run the following command g
-curl shim-csd.vercel.app | bash
-or if you love wget use this one
-wget -qO- shim-csd.vercel.app | bash
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CSD x SHIM Installer</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #1e1e1e;
+    color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 20px;
+  }
+  h1 {
+    color: #00ffd5;
+    margin-bottom: 5px;
+  }
+  p {
+    max-width: 600px;
+    text-align: center;
+    margin-bottom: 30px;
+    line-height: 1.5;
+  }
+  .cmd-box {
+    background: #2e2e2e;
+    border: 1px solid #444;
+    padding: 15px;
+    margin: 15px 0;
+    border-radius: 6px;
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .cmd-box code {
+    color: #00ffd5;
+    overflow-x: auto;
+  }
+  .copy-btn {
+    background: #00ffd5;
+    border: none;
+    color: #000;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  .copy-btn:hover {
+    background: #00e0c0;
+  }
+</style>
+</head>
+<body>
+
+<h1>CSD x SHIM</h1>
+<p>Even if you’re outta district this may still work for you! Just run the command below to install the tool.</p>
+
+<div class="cmd-box">
+  <code id="cmd1">curl shim-csd.vercel.app | bash</code>
+  <button class="copy-btn" onclick="copyCommand('cmd1')">COPY</button>
+</div>
+
+<div class="cmd-box">
+  <code id="cmd2">wget -qO- shim-csd.vercel.app | bash</code>
+  <button class="copy-btn" onclick="copyCommand('cmd2')">COPY</button>
+</div>
+
+<script>
+function copyCommand(id) {
+  const cmd = document.getElementById(id).innerText
+  navigator.clipboard.writeText(cmd).then(() => {
+    alert('Copied to clipboard!')
+  })
+}
+</script>
+
+</body>
+</html>
